2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 432727 - No
	completion if no constructor'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewCSharpExpressionFinder.cs: fixed 'Bug 434705 - No autocomplete
	offered if not assigning result of 'new' to a variable'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Removed debug messages.

2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs: fixed override bug.

2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 438708 - Changing
	namespace results in MD hanging'.

2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryParameterDataProvider.cs: fixed
Bug 434706 -
	Autocomplete should expand on pressing comma
Bug 434717 - No
	completion for nullable types

	* Gui/CSharpAmbience.cs: Fixed a null reference exception.

2008-10-22  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: C# ambience can now print instantiated types.

2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/AssemblyInfo.xft.xml: Use an AssemblyVersion that'll build
	with csc. Fixes "Bug 436273 - created AssemblyInfo.cs does not build
	on VS2005".

2008-10-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 436870 - Inheriting from
	base class gives bad code completion".

2008-10-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs: fixed Bug 436951 - Overriding an
	abstract property is incorrect.

2008-10-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Autotools/Autotools.mdp, Autotools/Makefile.am: Fix build.

2008-10-19  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs: