@@ -1,5 +1,10 @@
 2008-10-27  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 436870 - Inheriting from
+	base class gives bad code completion (reopened)" 
+
+2008-10-27  Mike Krüger  <mkrueger@novell.com>
+
 	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 432727 - No
 	completion if no constructor'.
 
